# emojifold

./: .env.example  .gitignore  CLAUDE.md  README.md  calculate_centroids.py  check_completeness.py  check_db.py  check_metrics.py  config.yaml  ecosystem.config.json  ecosystem_v3.config.json  generate_emoji_db.py  pyproject.toml  schema_v2.sql  schema_v3_codepoint.sql  sequential_beast.py  test_centroids.py  test_single_centroid.py  unicode_emojis.json  unicode_emojis.sql
emojifold/: __init__.py  batch.py  batch_v3.py  calculator.py  cli.py  cli_v3.py  find_kansas_emoji.py  models.py  storage.py
