[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emojifold"
version = "0.1.0"
description = "Emoji semantic manifold discovery through oppositional pair analysis"
authors = [
    {name = "EmojiFold Team"},
]
dependencies = [
    # Core ML & Embeddings
    "sentence-transformers>=2.2.2",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "hf_xet>=0.16.0",  # HuggingFace Xet Storage for faster downloads
    
    # Data handling
    "pandas>=2.1.0",
    "httpx>=0.25.0",  # For Ollama API calls
    "aiohttp>=3.9.0", # Async HTTP
    
    # Storage & Analysis (sqlite3 is built-in to Python)
    # "sqlite3-utils>=3.34",  # Not needed - we'll use built-in sqlite3
    "scipy>=1.11.0",  # For distance calculations
    
    # Utilities
    "tqdm>=4.66.0",   # Progress bars
    "click>=8.1.0",   # CLI interface
    "pydantic>=2.4.0", # Data validation
    "pyyaml>=6.0",    # YAML configuration
    "python-dotenv>=1.0.0", # Environment variables
    
    # Optional: Advanced features
    "umap-learn>=0.5.4",  # Dimensionality reduction
    "scikit-learn>=1.3.0", # ML utilities
]

[project.optional-dependencies]
gpu = [
    "torch[cuda]>=2.1.0",  # CUDA support for 4090
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
]
rdf = [
    "oxigraph>=0.3.0",  # If we need RDF storage
]

[project.scripts]
emojifold = "emojifold.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
